k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
  labels:
    name: test-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-demo
  namespace: test-ns
  labels:
    k8s-app: go-web-demo

spec:
  selector:
    matchLabels:
      k8s-app: go-web-demo
  replicas: 11
  revisionHistoryLimit: 10
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: go-web-demo
    spec:
      containers:
        - image: hub.docker.io/codingcn/micro-services/go-web-demo:latest
          imagePullPolicy: Always
          name: go-web-demo
          ports:
            - containerPort: 9903
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
          livenessProbe:
            tcpSocket:
              port: 9903
            initialDelaySeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 9903
            initialDelaySeconds: 10
            timeoutSeconds: 2



---

apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  namespace: test-ns
  labels:
    k8s-app: go-web-demo
spec:
  type: NodePort
  ports:
    - name: api
      port: 9903
      targetPort: 9903
      nodePort: 31000
  selector:
    k8s-app: go-web-demo

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: test-ns
spec:
  rules:
    - host: go-web-demo.local
      http:
        paths:
          - path: /
            backend:
              serviceName: demo-svc
              servicePort: api
